<resources>
    <string name="app_name">Music Theory</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Music Theory</string>

    <string name="action_settings">Settings</string>

    <string name="lessons_title">Lessons</string>
    <string name="rhythm_title">Rhythm</string>
    <string name="scales_title">Scales</string>
    <string name="chords_title">Chords</string>
    <string name="games_title">Games</string>
    <string name="piano_title">Piano</string>

    <string name="title_activity_rhythm_reference">Rhythm</string>

    <string name="rhythm_header">Rhythm</string>
    <string name="notes_header">Notes</string>
    <string name="rests_header">Rests</string>
    <string name="whole_text">whole</string>
    <string name="half_text">half</string>
    <string name="quarter_text">quarter</string>
    <string name="eighth_text">eighth</string>
    <string name="sixteenth_text">sixteenth</string>


    <string name="major">Major</string>
    <string name="seventh">Seventh</string>

    <string name="major_triad_recipe">Major Triad: 1st, 3rd, and 5th notes of a major scale</string>
    <string name="minor_triad_recipe">Minor Triad: 1st, 3rd, and 5th notes of a minor scale</string>
    <string name="major_seventh_recipe">Major 7th: 1st, 3rd, 5th, and 7th notes of a major scale</string>
    <string name="minor_seventh_recipe">Minor 7th: 1st, 3rd, 5th, and 7th notes of a minor scale</string>
    <string name="diminished_seventh_recipe">Diminished 7th 1st note of major scale, the flat of the 3rd and 5th notes, and a double flat of the 7th note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scales">Scales</string>
    <string name="title_activity_scales_game">Scales Game</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_chords">Chords</string>
    <string name="title_activity_piano">Piano</string>

    <string name="correct">correct.wav</string>
    <string name="title">Notes</string>
    <string name="button_name">Start</string>
    <string name="playback">Playback</string>
    <string-array name="note_array">
        <item>B4b</item>
        <item>B4</item>
        <item>C4b</item>
        <item>C5</item>
        <item>C5#</item>
        <item>D5b</item>
        <item>D5</item>
        <item>D5#</item>
        <item>E5b</item>
        <item>E5</item>
        <item>E5#</item>
        <item>F5</item>
        <item>F5#</item>
        <item>G5b</item>
        <item>G5</item>
        <item>G5#</item>
        <item>A5b</item>
        <item>A5</item>
        <item>A5#</item>
        <item>B5b</item>
        <item>B5</item>
        <item>C6b</item>
        <item>C6</item>
        <item>C6#</item>
        <item>D6b</item>
        <item>D6</item>
        <item>D6#</item>
        <item>E6b</item>
        <item>E6</item>
        <item>E6#</item>
    </string-array>

    <string-array name="maj_scale">
        <item>Bb</item>
        <item>B</item>
        <item>C</item>
        <item>C#</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
        <item>A</item>
    </string-array>

    <string-array name="min_scale">
        <item>Bb</item>
        <item>B</item>
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>Ab</item>
        <item>A</item>
    </string-array>



    <string-array name="major_scale" >
        <item>B4b D5 F5</item>
        <item>B4 D5# F5#</item>
        <item>C5 E5 G5</item>
        <item>C5# E5# G5#</item>
        <item>D5b F5 A5b</item>
        <item>D5 F5# A5</item>
        <item>E5b G5 B5b</item>
        <item>E5 G5# B5</item>
        <item>F5 A5 C6</item>
        <item>F5# A5# C6#</item>
        <item>G5b B5b D6b</item>
        <item>G5 B5 D6</item>
        <item>A5b C6 E6b</item>
        <item>A5 C6# E6</item>
    </string-array>

    <string-array name="minor_scale">
        <item>B4b D5b F5</item>
        <item>B4 D5 F5#</item>
        <item>C5 E5b G5</item>
        <item>C5# E5 G5#</item>
        <item>D5 F5 A5</item>
        <item>E5b G5b B5b</item>
        <item>E5 G5 B5</item>
        <item>F5 A5b C6</item>
        <item>F5# A5 C6#</item>
        <item>G5 B5b D6</item>
        <item>G5# B5 D6#</item>
        <item>A5b C6b E6b</item>
        <item>A5 C6 E6</item>


    </string-array>
    <string name="title_activity_chords_game">ChordsGameActivity</string>

</resources>
